@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* for content editor, Editor.writeHead must be called in html head
 * contentEditor.css must have:
 		div.contentEditorBar hr
 		{
